--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.0",
     "chai": "^4.3.6",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.4",
@@ -23,10 +24,12 @@
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-router": "^3.5.2",
